syntax = "proto3";
package PointCloudTools;

message Point3D {
    float x = 1;
    float y = 2;
    float z = 3;
}

message stringResponse {
    string message = 1;
}

message numericResponse {
    double metric = 1; 
}